[project]
name = "lang-graph-sandbox"
version = "0.1.0"
description = "MCP Host with LangGraph - Multi-LLM AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.3.26",
    "langchain-core==0.3.69",
    "langchain-openai==0.3.28",
    "langchain-anthropic==0.2.10",
    "langchain-ollama==0.3.5",
    "langgraph==0.5.3",
    "langgraph-checkpoint==2.1.1",
    "mcp==1.12.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "requests>=2.31.0",
    "groq>=0.4.0",
    "mistralai>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
